# cpp-web-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Vagrantfile
libs/: CMakeLists.txt
libs/include/: zmq.hpp
libs/include/utility/: worker.hpp
libs/include/utility/logging/: logger.hpp
libs/include/utility/memory/: keeper.hpp
libs/include/utility/networking/: zeromq.hpp
libs/utility/: CMakeLists.txt  keeper.cpp  logger.cpp  worker.cpp  zeromq.cpp
libs/utility/tests/: CMakeLists.txt  keeper-mixin.cpp  logger.cpp  logger_mem.cpp  worker.cpp
puppet/: index.pp
puppet/files/libcxx/: libc++.so.1.0
service/: CMakeLists.txt
service/include/: authorization.hpp  dispatcher.hpp  handler.hpp  handler_register.hpp  handler_registrar.hpp  response.hpp  response_type.hpp  root.hpp  session_version.hpp  web_engine.hpp  worker_group.hpp
service/source/: dispatcher.cpp  handler.cpp  handler_registrar.cpp  main.cpp  root.cpp  web_engine.cpp  worker_group.cpp
service/source/services/: CMakeLists.txt  demo.cpp
service/tests/: CMakeLists.txt  dispatcher.cpp  web_engine.cpp  worker_group.cpp
serviceproxy/: bootstrap.js  package.json  start.coffee
